# sen

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pymarkdown.yaml  .ruff.toml  .yamlfix.toml  .yamllint  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conanfile.py  mkdocs.yml
.conan/test_packages/package/: CMakeLists.txt  conanfile.py
apps/cli_archive/: CMakeLists.txt  main.cpp
apps/cli_gen/src/: CMakeLists.txt  main.cpp
apps/cli_gen/test/: CMakeLists.txt
apps/cli_package/: CMakeLists.txt  init_component.cpp  init_package.cpp  main.cpp  util.cpp  util.h
apps/cli_package/test/: CMakeLists.txt  init_component_test.cpp  init_package_test.cpp  util_test.cpp
apps/cli_remote_shell/: CMakeLists.txt  main.cpp
apps/cli_run/: CMakeLists.txt  main.cpp
apps/cli_run/builtin_configs/: explorer.yaml  replay.yaml  shell.yaml  term.yaml
apps/cli_sen/: CMakeLists.txt  main.cpp
components/ether/: CMakeLists.txt
components/ether/src/: beam_tracker.cpp  beam_tracker.h  beamer.cpp  beamer.h  bus_handler.cpp  bus_handler.h  component.cpp  discovery.cpp  discovery.h  ether_transport.cpp  ether_transport.h  multicast_beam_tracker.cpp  multicast_beam_tracker.h  multicast_beamer.cpp  multicast_beamer.h  output_queue.h  process_handler.cpp  process_handler.h  shared_buffer_sequence.h  stats.h  tcp_beam_tracker.cpp  tcp_beam_tracker.h  tcp_beamer.cpp  tcp_beamer.h  tcp_discovery_hub.cpp  tcp_discovery_hub.h  util.cpp  util.h  util_posix.cpp  util_win32.cpp
components/ether/stl/: configuration.stl  runtime.stl
components/explorer/: CMakeLists.txt
components/explorer/pkg/: sen-explorer.desktop  sen-explorer.in
components/explorer/src/: bus_window.cpp  bus_window.h  circular_list.h  component.cpp  editable_printer_maker.cpp  editable_printer_maker.h  event_explorer.cpp  event_explorer.h  icons_font.cpp  icons_font.h  main_bar.cpp  main_bar.h  method_printer.cpp  method_printer.h  object_state.cpp  object_state.h  plotter.cpp  plotter.h  property_data.cpp  property_data.h  quantity_visitor.cpp  quantity_visitor.h  util.cpp  util.h  value.cpp  value.h  value_font.cpp  value_font.h
components/explorer/stl/: configuration.stl
components/influx/: CMakeLists.txt
components/influx/src/: component.cpp  data_point.cpp  data_point.h  database.cpp  database.h  recorder.cpp  recorder.h  tcp.h  udp.h  util.cpp  util.h
components/influx/stl/: configuration.stl
components/logmaster/: CMakeLists.txt
components/logmaster/src/: component.cpp  logger_impl.cpp  logger_impl.h  logmaster_impl.cpp  logmaster_impl.h
components/logmaster/stl/: logmaster.stl
components/py/: CMakeLists.txt
components/py/src/: component.cpp  component_api.cpp  component_api.h  interpreter_obj.cpp  interpreter_obj.h  object_list_wrapper.cpp  object_list_wrapper.h  object_source_wrapper.cpp  object_source_wrapper.h  object_wrapper.cpp  object_wrapper.h  variant_conversion.cpp  variant_conversion.h
components/py/stl/: configuration.stl
components/py/test/: CMakeLists.txt
components/recorder/: CMakeLists.txt
components/recorder/src/: component.cpp  recorder.cpp  recorder.h  util.cpp  util.h
components/recorder/test/: CMakeLists.txt  recorder_crash_test.cpp  recorder_test.cpp  recorder_test_helpers.h
components/replayer/: CMakeLists.txt
components/replayer/src/: component.cpp  replay.cpp  replay.h  replayed_object.cpp  replayed_object.h  replayed_object_proxy.cpp  replayed_object_proxy.h  replayer.cpp  replayer.h  util.cpp  util.h
components/replayer/test/: CMakeLists.txt  replay_test.cpp  replayed_object_test.cpp  replayer_test.cpp  replayer_test_helpers.h
components/rest/: CMakeLists.txt  architecture.md
components/rest/config/: config.yaml  config_aircraft.yaml  config_calculator.yaml  config_school.yaml
components/rest/src/: base_router.cpp  base_router.h  client_session.cpp  client_session.h  component.cpp  component.h  http_header.cpp  http_header.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  json_response.h  jwt.cpp  jwt.h  locators.cpp  locators.h  notification_loop.cpp  notification_loop.h  notifications.cpp  notifications.h  object_interests_manager.cpp  object_interests_manager.h  object_invokes_manager.cpp  object_invokes_manager.h  object_members_manager.cpp  object_members_manager.h  response_adapter.cpp  response_adapter.h  sen_router.cpp  sen_router.cpp.orig  sen_router.h  types.cpp  types.h  utils.cpp  utils.h
components/rest/stl/: configuration.stl  options.stl  types.stl
components/rest/test/: CMakeLists.txt  config_test.cpp  e2e_test.cpp  http_response_test.cpp  jwt_test.cpp  locators_test.cpp  notifications_test.cpp  request.cpp  request.h  rest_e2e_fixture.cpp  rest_e2e_fixture.h  router_test.cpp  server_test.cpp
components/shell/: CMakeLists.txt
components/shell/stl/: remote_shell.stl  shell.stl
components/shell/test/: CMakeLists.txt
components/term/: CMakeLists.txt  architecture.md
components/term/src/: app.cpp  app.h  app_renderers.cpp  app_renderers.h  arg_form.cpp  arg_form.h  banner.cpp  banner.h  byte_format.h  clipboard.cpp  clipboard.h  command_engine.cpp  command_engine.h  command_engine_inspect.cpp  command_engine_watch.cpp  completer.cpp  completer.h  component.cpp  input_pane.cpp  input_pane.h  log_router.cpp  log_router.h  log_sink.cpp  log_sink.h  object_store.cpp  object_store.h  output_capture.cpp  output_capture.h  output_pane.cpp  output_pane.h  parse_utils.h  scope.cpp  scope.h  signature_renderer.cpp  signature_renderer.h  status_bar.cpp  status_bar.h  styles.h  suggester.cpp  suggester.h  (+9 more)
components/term/stl/: term.stl
components/term/test/: CMakeLists.txt
examples/: CMakeLists.txt
examples/apps/: CMakeLists.txt
examples/config/: CMakeLists.txt
latest/doxygen/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/db/: CMakeLists.txt
libs/db/src/: constants.h  (+12 more)
libs/kernel/: CMakeLists.txt
libs/util/: CMakeLists.txt
test/support/: CMakeLists.txt
(+3376 files in other folders)
